Add initial active styling for block elements in areas section on HomePage.

--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -799,13 +799,13 @@
                     background-color: $gray-hover;
                     font-size: $font-size-small-regular;
                     height: 80px;
-                    color: $white;
+                    color: $black;
                     margin-top: 0;
+                    background-color: $yellow;
                   }
 
                   &:hover {
                     background-color: $yellow;
-                    color: $black;
                   }
                 }
               }
