--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -462,9 +462,7 @@
 
                 &:nth-child(3) { margin: 0; }
 
-                &:nth-child(4) {
-                  margin: 0 !important;
-                }
+                &:nth-child(4) { margin: 0 !important; }
               }
             }
 
@@ -491,3 +489,4 @@
       }
     }
   }
+}
