--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -3,6 +3,13 @@
 @import "partials/variables";
 
 .lawyer-page {
+  .container {
+    .width-container {
+      position: relative;
+      z-index: 20;  
+    }
+  }
+
   .width-container {
     width: 100%;
     margin-bottom: 30px;
