--- a/src/components/Pages/ContactPage/ContactPage.scss
+++ b/src/components/Pages/ContactPage/ContactPage.scss
@@ -110,6 +110,8 @@
           .bottom {
             margin-top: 20px;
             flex-direction: row-reverse;
+
+            .map { margin-top: 0; }
           }
 
           .med-line { display: none; }
@@ -146,6 +148,8 @@
 
             .bottom {
                justify-content: space-between;
+
+               .map { margin-top: 0; }
 
                .lines {
                  margin-top: -50px;
