--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -23,7 +23,7 @@
     z-index: 300;
 
     &.gray {
-      padding: 0 21px;  
+      padding: 0 21px;
       z-index: 300;
       .nav-item:first-child { margin-left: 15px; }
     }
@@ -61,8 +61,16 @@
   display: none;
   cursor: pointer;
   align-items: center;
-  width: 100%;
   justify-content: flex-end;
+  height: 33px;
+  z-index: 100;
+  @include hover-transition;
+
+  &:hover .navicon {
+    background-color: $black-hover;
+
+    &:before, &:after { background-color: $black-hover; }
+  }
 
   .navicon {
     background: $black;
@@ -95,8 +103,6 @@
     .nav-wrapper, .nav-wrapper-gray { top: 0; }
 
     .menu-icon {
-      z-index: 300;
-
       .navicon {
         background: transparent;
 
@@ -344,24 +350,26 @@
           .nav-item { font-size: $font-size-small + 0.2; }
         }
 
-        &.en {
-          .nav-item:first-child {
-            margin-right: 13px;
-            margin-left: 10px;
+        .nav-wrapper {
+          &.en {
+            .nav-item:first-child {
+              margin-right: 13px;
+              margin-left: 10px;
+            }
+            .nav-item:nth-child(2) { margin-right: 24px; }
+            .nav-item:nth-child(3) { margin-right: 28px; }
+            .nav-item:nth-child(4) { margin-right: 19px; }
           }
-          .nav-item:nth-child(2) { margin-right: 24px; }
-          .nav-item:nth-child(3) { margin-right: 28px; }
-          .nav-item:nth-child(4) { margin-right: 19px; }
-        }
 
-        &.rs {
-          .nav-item:first-child {
-            margin-left: 18px;
-            margin-right: 16px;
+          &.rs {
+            .nav-item:first-child {
+              margin-left: 18px;
+              margin-right: 16px;
+            }
+            .nav-item:nth-child(2) { margin-right: 18px; }
+            .nav-item:nth-child(3) { margin-right: 19px; }
+            .nav-item:nth-child(4) { margin-right: 20px; }
           }
-          .nav-item:nth-child(2) { margin-right: 18px; }
-          .nav-item:nth-child(3) { margin-right: 19px; }
-          .nav-item:nth-child(4) { margin-right: 20px; }
         }
       }
     }
@@ -398,6 +406,8 @@
         z-index: 20;
         box-shadow: 2px 3px 60px 30px #ccc;
         transition: all 0.3s ease-out;
+        align-items: center;
+        justify-content: space-between;
 
         &.gray {
             padding: 15px 21px;
