Fix areas block hover text stying to be black (HomePage).

--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -805,6 +805,7 @@
 
                   &:hover {
                     background-color: $yellow;
+                    color: $black;
                   }
                 }
               }
