--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -1156,6 +1156,9 @@
 @media only screen and (max-width:880px) {
   .homepage {
     .header-area {
+
+      .arrow { margin-left: 314px; }
+
       .left {
         max-height: 420px;
         margin-left: 95px;
@@ -1279,6 +1282,9 @@
 @media only screen and (max-width:700px) {
   .homepage {
     .header-area {
+
+        .arrow { margin-left: 272px; }
+
       .left {
         max-height: 380px;
         margin-left: 70px;
@@ -1303,6 +1309,8 @@
 
     .header-area {
       margin-bottom: 150px;
+
+      .arrow { margin-left: 200px; }
 
       .left {
         margin: 0 auto;
