Add background to mobile nav-wrapper.

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -452,7 +452,7 @@
           }
 
           .nav-wrapper, .nav-wrapper-gray {
-            background: $yellow;
+            background-image: linear-gradient($yellow, $gray);
             width: 100vw;
             left: 0;
             right: 0;
