Fix AreasPage select single value font size.

--- a/src/components/Pages/AreasPage/AreasPage.scss
+++ b/src/components/Pages/AreasPage/AreasPage.scss
@@ -59,6 +59,8 @@
               border-left: none;
               border-right: none;
               background-color: transparent;
+
+              .react-select__single-value { font-size:$font-size-medium-small; }
             }
             .react-select__menu {
               border: none;
