--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -452,7 +452,7 @@
           }
 
           .nav-wrapper, .nav-wrapper-gray {
-            background-image: linear-gradient($yellow, $gray);
+            background-image: linear-gradient(to bottom right,$yellow, $dark-gray-hover);
             width: 100vw;
             left: 0;
             right: 0;
