Fix heading styling for AboutUsPage.

--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -44,6 +44,7 @@
           color: $dark-gray;
           margin-top: 20px;
           padding-left: 8px;
+          width: 280px;
         }
 
         .arrow {
